feat: Adding a global error handler middleware + adding the tickets feature
