# backend/tickets/models/create_ticket_request.go
@@ -6,11 +6,20 @@ import (
 	"go.mongodb.org/mongo-driver/bson/primitive"
 )
 
-type TicketEntity struct {
-	ID          primitive.ObjectID  `bson:"_id,omitempty" json:"id"`
+type CreateTicketRequest struct {
 	Title       string              `json:"title"`
 	Description string              `json:"description"`
 	UserID      primitive.ObjectID  `json:"user_id"`
 	AssignedTo  *primitive.ObjectID `json:"assigned_to"`
 	Status      enums.TicketStatus  `json:"status"`
+}
+
+func (request *CreateTicketRequest) ToEntity() *TicketEntity {
+	return &TicketEntity{
+		Title:       request.Title,
+		Description: request.Description,
+		UserID:      request.UserID,
+		AssignedTo:  nil,
+		Status:      request.Status,
+	}
 }
